 ! (Skills) Axe's Impact now uses a rank system
 ! (Skills) Herbalism's Farmer's Diet now uses a rank system
 ! (Skills) Herbalism's Green Thumb now uses a rank system
 ! (Skills) Shake now uses a rank system
 ! (Skills) Flux Mining now uses a rank system
 ! (Skills) Removed traps from fishing
 ! (Skills) Dodge now uses a rank system
 ! (Skills) Arrow Retrieval now uses a rank system

 ! (Kraken) Removed everything involving the kraken
 = (Skills) Shake now sends custom damage types for better nocheat compat
 ! (Config) Unarmed.IronArm in advanced.yml is now Unarmed.IronArmStyle
 ! (Config) Unarmed.Deflect in advanced.yml is now Unarmed.ArrowDeflect
 ! (Config) Swords.Counter in advanced.yml is now Swords.CounterAttack
 ! (Config) Archery.Retrieve in advanced.yml is now Archery.ArrowRetrieval
 ! (Config) Axes.CriticalHit in advanced.yml is now Axes.CriticalStrikes
 ! (Config) Archery's Skill Shot now uses RankDamageMultiplier for its damage bonus calculations
 ! (Config) Axe's Axe mastery now uses RankDamageMultiplier for its damage bonus calculations
 ! (Permissions) Replaced the old Double Drop permission node for woodcutting with a new Harvest Lumber permission node
 ! (Permissions) Fast Food Service permission node renamed to mcmmo.ability.taming.fastfoodservice
 ! (Permissions) Counter Attack permission node renamed to mcmmo.ability.swords.counterattack
 ! (Permissions) Arrow Deflect permission node renamed to mcmmo.ability.unarmed.arrowdeflect
 ! (Permissions) Iron Arm Style permission node renamed to mcmmo.ability.unarmed.ironarmstyle
 ! (Permissions) Remove all mob health bar permissions, this is no longer a per-player setting.
 ! (Commands) Removed the mobhealthbar command, this is no longer a per-player setting.
 ! (Locale) The descriptions of a few skills have changed
 ! (Locale) Removed redundant information from some skill names and descriptions en_US (other locales will need to be updated)