@@ -118,7 +118,8 @@ Version 2.1.0
  ! (Skills) Removed traps from fishing
  ! (Skills) Dodge now uses a rank system
  ! (Skills) Arrow Retrieval now uses a rank system
-
+ ! (Skills) Axes' Critical Strikes now uses a rank system
+ ! (Skills) Axes' Greater Impact now uses a rank system
  ! (Kraken) Removed everything involving the kraken
  = (Skills) Shake now sends custom damage types for better nocheat compat
  ! (Config) Unarmed.IronArm in advanced.yml is now Unarmed.IronArmStyle
